# HuskyLwa

./: LICENSE  README.md
clearpath_tec_bringup/: CMakeLists.txt  package.xml
clearpath_tec_bringup/config/: arm_control.rviz  arm_ffmv.yaml  arm_lidar_camera.vcg  husky_ekf.yaml  mast_ffmv.yaml
clearpath_tec_bringup/launch/: arm_controller.launch
clearpath_tec_bringup/launch/demos/: sim_description.launch  simulation.launch
clearpath_tec_bringup/launch/husky-core.d/: arm_bringup.launch  arm_camera.launch  arm_lidar.launch  base.launch  description.launch  ekf.launch  gps.launch  husky_arm_watchdog.launch  lights.launch  lms100.launch  mast_camera.launch  openni.launch  ptu.launch  um6.launch
clearpath_tec_moveit/: .setup_assistant  CMakeLists.txt  package.xml
clearpath_tec_moveit/config/: controllers.yaml  joint_limits.yaml  lwa_husky.srdf  lwa_trajectory_params.yaml  ompl_planning.yaml
clearpath_tec_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  lwa_husky_moveit_controller_manager.launch.xml  lwa_husky_moveit_sensor_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
clearpath_tec_moveit/src/: set_arm_joints.cpp  set_arm_pose.cpp
clearpath_tec_teleop/: CMakeLists.txt  package.xml
clearpath_tec_teleop/include/clearpath_tec_teleop/: FalconSpacenavTeleop.h  JoystickTeleop.h
clearpath_tec_teleop/launch/: logitech_teleop.launch  ptu.launch
clearpath_tec_teleop/scripts/: fake_joystick.py  ptu_teleop.py
clearpath_tec_teleop/src/: logitech_teleop.cpp
robotiq_s_model_control/: CMakeLists.txt  package.xml  setup.py
robotiq_s_model_control/src/robotiq_s_model_control/: __init__.py
tec_description/: CMakeLists.txt  package.xml
tec_description/calibration/: calibration.urdf.xacro
tec_description/include/lwa_plugin/: lwa_plugin.h
tec_description/include/tec_plugin/: tec_plugin.h
tec_description/launch/: base.urdf.gazebo.launch
tec_description/meshes/models/: battery_door.stl  front_panel.stl  rear_panel.stl  sensor_mast.stl  sensor_mast_simple.stl  top_plate_i.stl
tec_description/src/: lwa_plugin.cpp  tec_plugin.cpp
tec_description/urdf/: lwa_husky.urdf.xacro
tec_description/urdf/components/: d46.urdf.xacro  firefly.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  lms151.urdf.xacro
tec_description/urdf/lwa/: lwa.gazebo.xacro  lwa.urdf.xacro
tec_description/urdf/utils/: parts.urdf.xacro  wheel.urdf.xacro
